[project]
name = "recommender-systems"
version = "0.1.0"
description = "A user-user collaborative filtering system"
authors = [
    {name = "Maxwell Selassie",email = "maxwellselassie2004@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
    "scikit-surprise (>=1.1.4,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (<2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

